[gd_scene load_steps=8 format=3 uid="uid://lj1vhb8ywbbe"]

[ext_resource type="Script" uid="uid://lws8vlset8wm" path="res://Script/HUD/Items/item_ui.gd" id="1_k8ivp"]
[ext_resource type="PackedScene" uid="uid://y2lgxnin8duq" path="res://Scene/HUD/ItemLayer.tscn" id="2_ew5jg"]
[ext_resource type="Texture2D" uid="uid://b1p5r7078bbt3" path="res://Assets/Free Bow and Crossbow Icons/PNG/Transperent/Icon27_no_effect.png" id="2_pe54i"]
[ext_resource type="Script" uid="uid://komguvwd0gc3" path="res://Script/bbcode_rich_text_label.gd" id="4_tq3lr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pe54i"]
atlas = ExtResource("2_pe54i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ew5jg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe54i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h700q"]
size = Vector2(38, 38)

[node name="Item" type="Node2D"]
script = ExtResource("1_k8ivp")
item_layer_scene = ExtResource("2_ew5jg")

[node name="WeaponAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(1.1875, 1.1875)
sprite_frames = SubResource("SpriteFrames_ew5jg")

[node name="BBCodeRichTextLabel" type="RichTextLabel" parent="."]
offset_left = -37.0
offset_top = 9.0
offset_right = 19.0
offset_bottom = 49.0
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "[right]â˜…[/right]"
script = ExtResource("4_tq3lr")
metadata/_custom_type_script = "uid://komguvwd0gc3"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_h700q")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
